--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
-    <title>Datepick</title>
+    <title>Datepick - Javascript library</title>
     <script src="../dist/datepick.js"></script>
-    <link rel="stylesheet" href="../dist/datepick.min.css">
+    <link rel="stylesheet" href="../dist/datepick.css">
   </head>
   <body>
     <h1>기본 캘린더</h1>
