Fix. demo path modify

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
     <title>Datepick - Javascript library</title>
-    <script src="../dist/datepick.min.js"></script>
-    <link rel="stylesheet" href="../dist/datepick.min.css">
+    <script src="../dist/datepick.js"></script>
+    <link rel="stylesheet" href="../dist/datepick.css">
   </head>
   <body>
     <h1>기본 캘린더</h1>
